models/tests/errors/semantic/typeoverride2.ucl
// UCLID TEST
// Solver=z3
// Result=None

type fib;
const x: fib;

type fib;

module main {

    var y : fib;

    invariant cex: y == x;

    control {
        induction;
        check;
    }
}